--- a/.termux/termux.properties
+++ b/.termux/termux.properties
@@ -90,7 +90,7 @@
 ###############
 
 ###F Force black colors for drawer and dialogsuse-black-ui
-use-black-ui = true
+#use-black-ui = true
 
 ###############
 # HW keyboard shortcuts
