--- a/.termux/termux.properties
+++ b/.termux/termux.properties
@@ -9,7 +9,7 @@
 ### Allow external applications to execute arbitrary commands within Termux.
 ### This potentially could be a security issue, so option is disabled by
 ### default. Uncomment to enable.
-# allow-external-apps = true
+allow-external-apps = true
 
 ### Default working directory that will be used when launching the app.
 # default-working-directory = /data/data/com.termux/files/home
@@ -30,7 +30,7 @@
 
 ### Uncomment to use volume keys for adjusting volume and not for the
 ### extra keys functionality.
-# volume-keys = volume
+volume-keys = volume
 
 ###############
 # Fullscreen mode
